--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "framer-motion": "^12.25.0",
     "jose": "^6.1.3",
     "jsonwebtoken": "^9.0.3",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.562.0",
     "mongoose": "^9.1.2",
-    "next": "^16.1.1",
+    "next": "^16.1.4",
     "next-auth": "^4.24.13",
     "next-cloudinary": "^6.17.5",
     "next-themes": "^0.4.6",
@@ -31,6 +33,7 @@
     "qrcode": "^1.5.4",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-select": "^5.10.2",
     "recharts": "^3.6.0",
     "redis": "^5.10.0",
     "use-debounce": "^10.1.0",
