added dashboard chnages

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.3",
     "jspdf": "^4.0.0",
     "jspdf-autotable": "^5.0.7",
+    "lightweight-charts": "^5.1.0",
     "lucide-react": "^0.562.0",
     "mongoose": "^9.1.2",
     "next": "^16.1.4",
